<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:longClickable="true">

    <LinearLayout
        android:id="@+id/container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/beacon_item_view_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/beacon_item_uuid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="UUID"
                android:textSize="@dimen/text_small_body" />

            <TextView
                android:id="@+id/tvUuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small_body"
                tools:text="3434edsds" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/beacon_item_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingTop="1dp"
            android:paddingRight="12dp"
            android:paddingBottom="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/beacon_item_rssi_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mv_text_distance"
                        android:textSize="@dimen/text_small_body" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/beacon_item_distance_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="6dp"
                        android:textSize="28dp"
                        tools:text="44" />

                    <TextView
                        android:id="@+id/beacon_item_distance_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mv_text_distance_unit"
                        android:textSize="@dimen/text_body" />
                </LinearLayout>

                <TextView
                    android:id="@+id/beacon_item_proximity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/text_small_body"
                    tools:text="1 second ago" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/beacon_item_tx_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mv_text_txpower"
                    android:textSize="@dimen/text_small_body" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/beacon_item_tx_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:textSize="@dimen/text_small_body"
                        tools:text="55" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mv_text_rssi_unit"
                        android:textSize="@dimen/text_small_body" />
                </LinearLayout>

                <TextView
                    android:id="@+id/mv_text_rssi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mv_text_rssi"
                    android:textSize="@dimen/text_small_body" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/beacon_item_rssi_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:textSize="@dimen/text_small_body"
                        tools:text="4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mv_text_rssi_unit"
                        android:textSize="@dimen/text_small_body" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/beacon_item_id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mv_text_name"
                    android:textSize="@dimen/text_small_body" />

                <TextView
                    android:id="@+id/beacon_item_id1_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small_body"
                    tools:text="ddd" />

                <LinearLayout
                    android:id="@+id/beacon_major_minor_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/beacon_item_major_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Major"
                            android:textSize="@dimen/text_extra_small_body" />

                        <TextView
                            android:id="@+id/beacon_item_id2_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:textSize="@dimen/text_small_body"
                            tools:text="20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/beacon_minor_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/beacon_item_minor_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Minor"
                            android:textSize="@dimen/text_extra_small_body" />

                        <TextView
                            android:id="@+id/beacon_item_id3_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:textSize="@dimen/text_small_body"
                            tools:text="20" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
